--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: pod-mysb
-        image: oolralra/spring:21
+        image: yyyubn/spring:12
         ports:
         - containerPort: 8085
 ---
